wrap fix

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -1,3 +1,8 @@
 // ==============================
 // Custom style
 // ==============================
+
+pre {
+  white-space: pre-wrap; /* allow wrapping inside code blocks */
+  word-break: break-word; /* allow breaking long words */
+}
